SERVER-15962 only use KEEP_MUTATIONS for index intersection plans

It is no longer required for other plans.